--- a/templates/sslasher.conf.erb
+++ b/templates/sslasher.conf.erb
@@ -2,8 +2,8 @@ user <%= USER %> <%= GROUP %>;
 
 worker_processes 1;
 
-pid <%= RAILS_ROOT %>/tmp/pids/nginx.pid;
-error_log <%= RAILS_ROOT %>/log/nginx_error.log;
+pid <%= APP_ROOT %>/tmp/pids/nginx.pid;
+error_log <%= APP_ROOT %>/log/nginx_error.log;
 
 events {
 	worker_connections 1024;
@@ -14,7 +14,7 @@ events {
 http {
 	include <%= NGINX_MIME_FILE %>;
 	default_type application/octet-stream;
-  access_log <%= RAILS_ROOT %>/log/nginx_access.log combined;
+  access_log <%= APP_ROOT %>/log/nginx_access.log combined;
 
 	# you generally want to serve static files with nginx since neither
 	# Unicorn nor Rainbows! is optimized for it at the moment
@@ -53,7 +53,7 @@ http {
 		# Rails error pages
 		error_page 500 502 503 504 /500.html;
 		location = /500.html {
-			root <%= RAILS_ROOT %>/current/public;
+			root <%= APP_ROOT %>/current/public;
 		}
 	}
 
@@ -62,8 +62,8 @@ http {
 		listen       443;
 
 		ssl                  on;
-		ssl_certificate      <%= HOME_DIR %>/.ssl/sslasher.csr;
-		ssl_certificate_key  <%= HOME_DIR %>/.ssl/sslasher.key;
+		ssl_certificate      <%= USR_HOME %>/.ssl/sslasher.csr;
+		ssl_certificate_key  <%= USR_HOME %>/.ssl/sslasher.key;
 
 		ssl_session_timeout  5m;
 
@@ -90,7 +90,7 @@ http {
 		# Rails error pages
 		error_page 500 502 503 504 /500.html;
 		location = /500.html {
-			root <%= RAILS_ROOT %>/current/public;
+			root <%= APP_ROOT %>/current/public;
 		}
 	}
 
